--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
     padding-left: 20px;
     float: left;
     padding-top: 10px;
-    margin-top: 5px
+    margin-top: 5px;
 }
 
 
@@ -148,10 +148,7 @@
     color: #fff;
     transition: 0.4s ease;
 }
-.btnn:hover{
-    background: #fff;
-    color: #ff7200;
-}
+
 .btnn a{
     text-decoration: none;
     color: #000;
